<resources>
    <string name="app_name">My Application</string>

    <!-- Strings related to login -->


    <string name="first">开启诗词之旅</string>
    <string name="forget_TS">验证码已发送至158******9924</string>
    <string name="question_question">提示问题</string>
    <string name="login_XYH">新用户？点此</string>
    <string name="gender_man">男</string>
    <string name="gender_text">性别</string>
    <string name="final_sign_up">注  册</string>
    <string name="login_YZ">验证码登录</string>
    <string name="login_WJ">忘记密码</string>
    <string name="prompt_name">昵称</string>
    <string name="daily_question">问题</string>
    <string name="daily_number">1/10</string>
    <string name="pk_user1">小红</string>
    <string name="pk_user2">小明</string>
    <string name="pk_pk">VS</string>
    <string name="main_B1">每日挑战</string>
    <string name="main_B2">诗词宝盒</string>
    <string name="main_B3">排行榜</string>
    <string name="main_B4">排位赛</string>
    <string name="main_B5">好友PK</string>
    <string name="main_B6">设置</string>
    <string name="main_B7">更多</string>
    <string name="phone_get">获取</string>
    <string name="phone_phone">输入手机号</string>
    <string name="phone_world">输入验证码</string>
    <string name="register_1">1.输入短信验证码></string>
    <string name="register_2">2.设置密码</string>
    <!--<string name="register_3">3.设置密码></string>-->
    <string name="register_phone">输入手机号</string>
    <string name="register_word">获取验证码</string>
    <string name="register_text">已有账号？</string>
    <string name="register_button">点此登陆</string>
    <string name="security_word">验证码</string>
    <string name="password_word">输入密码</string>
    <string name="password_sure">确认密码</string>
    <string name="password_botton">注册</string>
    <string name="forget_botton">确定</string>
    <string name="security_button">提交验证码</string>
    <string name="prompt_username">账号</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登  录</string>
    <string name="action_sign_in_other">第三方用户登录</string>
    <string name="action_sign_in_short">注册</string>
    <string name="error_invalid_username">该用户名已经注册</string>
    <string name="error_invalid_password">密码不安全</string>
    <string name="error_incorrect_password">密码错误</string>
    <string name="error_field_required">This field is required</string>
    <string name="search_context">搜索诗词,作者,用户</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing username</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_personal">个人主页</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
</resources>
