<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login"
    tools:context="com.example.gaoqing.myapplication.LoginActivity"
    android:weightSum="1"
    >

    <!-- Login progress -->

    <ScrollView
        android:paddingTop="20dp"
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        >

        <LinearLayout
            android:id="@+id/username_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"

            >

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <AutoCompleteTextView
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_phone"
                    android:inputType="textEmailAddress"
                    android:padding="10dp"
                    android:background="@drawable/wedgestyle"
                    />

            </android.support.design.widget.TextInputLayout>




            <LinearLayout
                android:id="@+id/username_sign_up_form"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:weightSum="1">

                <android.support.design.widget.TextInputLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_get"
                        android:imeActionId="@+id/login"
                        android:imeActionLabel="@string/phone_world"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:background="@drawable/wedgestyle"
                        tools:ignore="InvalidImeActionId" />

                </android.support.design.widget.TextInputLayout>


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <Button
                        android:id="@+id/botton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:text="@string/phone_get"
                        android:textSize="18dp"
                        android:textColor="#ffffff"
                        android:background="@drawable/buttonstyle"  />
                </RelativeLayout>

            </LinearLayout>

            <Button
                android:id="@+id/username_sign_in_button"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="5.97"
                android:background="@drawable/buttonstyle"
                android:text="@string/forget_botton"
                android:textSize="25dp"
                android:textColor="#ffffff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/forget_TS"
                android:gravity="center_horizontal"
                android:textSize="20dp"
                android:visibility="invisible"/>


        </LinearLayout>

    </ScrollView>


</LinearLayout>
