<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PkActivity">

    <FrameLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/eye"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/eye"/>

        <ImageView
            android:id="@+id/eyeright"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/eyeright"
            android:visibility="invisible"/>

        <ImageView
            android:id="@+id/eyeleft"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/eyeleft"
            android:visibility="invisible"/>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">



                <TextView
                    android:id="@+id/user1"
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:hint="@string/pk_user1"
                    android:textSize="19dp"
                    android:paddingRight="10dp"
                    android:gravity="right|center"
                    android:padding="10dp"
                    android:background="@drawable/pkkstyle"
                    />


            <TextView
                android:id="@+id/pk"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:hint="@string/pk_pk"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:textSize="25dp"
                android:background="@drawable/pkkstyle"/>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp">
            <TextView
                android:id="@+id/user2"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:hint="@string/pk_user2"
                android:layout_alignParentRight="true"
                android:textSize="19dp"
                android:gravity="left|center"
                android:padding="10dp"
                android:background="@drawable/pkkstyle"/>
            </RelativeLayout>

            <ImageView
                android:id="@+id/girl"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/girl"
                />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="60dp">
            <ImageView
                android:id="@+id/boy"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:src="@drawable/boy"
                android:layout_alignParentRight="true"
                />
            </RelativeLayout>
        </FrameLayout>


    <LinearLayout
        android:layout_marginTop="60dp"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:id="@+id/name"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:hint="@string/daily_question"
            android:textSize="19dp"
            android:gravity="center"
            android:padding="10dp"
            android:background="@drawable/edittextstyle"/>
        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/answerstyle"
            android:text="Button" />
        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/answerstyle"
            android:text="Button" />
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/answerstyle"
            android:text="Button" />
        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/answerstyle"
            android:text="Button" />

    </LinearLayout>

    </FrameLayout>
</android.support.constraint.ConstraintLayout>
